[package]
name = "ggj2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_motiongfx = { git = "https://github.com/nixon-voxell/bevy_motiongfx.git", rev = "626dee8dc396546af9c963986801d852338dc1ff" }
