[package]
name = "ggj2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_motiongfx = { git = "https://github.com/nixon-voxell/bevy_motiongfx.git", rev = "9e1c6fb9b5e3ef9e32af48b641235a127aab4256" }
bevy_rapier2d = "0.23"
bevy-vello = {git = "https://github.com/vectorgameexperts/bevy-vello.git"}
